--- a/css/tooplate-style1.css
+++ b/css/tooplate-style1.css
@@ -213,7 +213,7 @@ a:hover, a:active, a:focus {
 -----------------------------------------*/
 
 #home {
-  background: url('../images/kids1.jpg') 50% 0 repeat-y fixed;
+  background: url('../images/alyssaprofile1.JPEG') 50% 0 repeat-y fixed;
   background-size: cover;
   background-position: center center;
   display: -webkit-box;
@@ -391,11 +391,11 @@ a:hover, a:active, a:focus {
 footer {
   background: #7682cc;
   text-align: center;
-  padding: 120px 0;
+  padding: 20px 0;
 }
 
 footer p {
-  padding-bottom: 16px;
+  padding-bottom: 20px;
 }
 
 
