--- a/css/tooplate-style.css
+++ b/css/tooplate-style.css
@@ -213,7 +213,7 @@ a:hover, a:active, a:focus {
 -----------------------------------------*/
 
 #home {
-  background: url('../images/alyssaprofile1.JPEG') 50% 0 repeat-y fixed;
+  background: url('../images/home-bg.jpg') 50% 0 repeat-y fixed;
   background-size: cover;
   background-position: center center;
   display: -webkit-box;
