--- a/css/tooplate-style1.css
+++ b/css/tooplate-style1.css
@@ -40,14 +40,14 @@ h1 {
 }
 
 h2 {
-  color: #2b2b2b;
+  color: #0c0c0c;
   font-size: 35px;
   line-height: 52px;
   margin-top: 0px;
 }
 
 h3 {
-  color: #282828;
+  color: #0a0a0a;
   font-size: 16px;
   line-height: 32px;
   letter-spacing: 6px;
@@ -55,7 +55,7 @@ h3 {
 }
 
 h4 {
-  color: #353535;
+  color: #0a0a0a;
   font-size: 20px;
 }
 
